After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 315023 - hand pointer retained when using keyboard shortcuts for navigation
hand pointer retained when using keyboard shortcuts for navigation
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: List View
2.91.x
Other All
: Normal minor
: 3.0
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 394662 405447 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2005-09-01 12:09 UTC by Martin West
Modified: 2011-04-04 17:37 UTC
See Also:
GNOME target: ---
GNOME version: 2.91/3.0


Attachments
icon-canvas-item: make sure to reset the default cursor ond destruction (2.56 KB, patch)
2011-03-31 18:18 UTC, Cosimo Cecchi
committed Details | Review

Description Martin West 2005-09-01 12:09:28 UTC
Please describe the problem:
if the hand pointer is shown over an icon, then alt- <- is pressed, the
preceding page may not have an icon under the pointer, and yet the hand remains
until it is rolled over another icon.

Steps to reproduce:
1. navigate to an folder with few items in it, so there is background space
2. navigate directly to a full folder and leave pointer over an icon
3. press back


Actual results:
hand pointer remains even if it is over blank space

Expected results:
it should revert to being the normal pointer when not over an icon

Does this happen every time?
yes, and i've seen it when doing other task, probably with keyboard shortcuts.

Other information:
Comment 1 Christian Neumair 2005-09-01 22:59:16 UTC
Thanks for your bug report! The relevant code is in
src/file-manager/fm-list-view.c, which only updates the hover path on
motion_notify_callback. We could move the whole
 if (click_policy_auto_value == NAUTILUS_CLICK_POLICY_SINGLE) {

into an extra function, which ought to be called on various changes to the
model, for instance "row-collapsed" and "row-expanded". CCing Dennis and Paolo,
since file-roller and gnome-search-tool contain duplicated code. I'm not sure
whether it is usually relevant for you, but if changes can happen on the fly to
your models, you should update the hover paths, at least on "row-changed",
"row-deleted" and "row-inserted".
Comment 2 Dennis Cranston 2005-09-02 00:24:14 UTC
I tested gnome-search-tool, and it is not affected by this bug.
Comment 3 Teppo Turtiainen 2007-02-12 18:38:52 UTC
Bug 315023, bug 394662 and bug 405447 are probably related/duplicates.
Comment 4 Cosimo Cecchi 2011-03-31 17:52:04 UTC
*** Bug 405447 has been marked as a duplicate of this bug. ***
Comment 5 Cosimo Cecchi 2011-03-31 17:52:08 UTC
*** Bug 394662 has been marked as a duplicate of this bug. ***
Comment 6 Cosimo Cecchi 2011-03-31 18:18:03 UTC
Created attachment 184809 [details] [review]
icon-canvas-item: make sure to reset the default cursor ond destruction

We might be destroyed while hovering while in single-click mode, so make
sure the default cursor is always cleared when finalizing, if we didn't
get a leave event.
Comment 7 Cosimo Cecchi 2011-04-04 17:37:07 UTC
Pushed to master.

Attachment 184809 [details] pushed as 2644c6e - icon-canvas-item: make sure to reset the default cursor ond destruction