icon-canvas-item: make sure to reset the default cursor ond destruction

We might be destroyed while hovering while in single-click mode, so make
sure the default cursor is always cleared when finalizing, if we didn't
get a leave event.

https://bugzilla.gnome.org/show_bug.cgi?id=315023